# danvas

./: .gitignore  HANDOFF.md  LICENSE  PROJECT_CONTEXT.md  README.md  design.md  pyproject.toml
.github/workflows/: ci.yml
docs/: backlog.md  course-yaml.md  files-upload-spec.md  pdd-v1.md  sprint-1.md  sprint-2.md  sprint-3.md
docs/sprints/: 01-transaction-safe-grades.md  02-override-aware-assignments.md  03-submission-evidence.md  04-5-canvas-pages-v2.md  04-canvas-pages-v1.md  05-source-lint.md  06-canvas-pages-status.md  07-canvas-pages-sync.md  08-privacy-filesystem-safety.md  09-correctness-resilience.md  README.md
src/danvas/: __init__.py  announcements.py  assignment_audit.py  assignments.py  auth.py  cli.py  config.py  courses.py  discussions.py  files.py  frontmatter.py  gradebook.py  grades.py  overrides.py  pages.py  panopto.py  quiz.py  quiz_import.py  reports.py  source_lint.py  source_map.py  sources.py  status.py  submissions.py  utils.py
tests/: conftest.py  fixtures.py  test_announcements.py  test_assignment_audit.py  test_assignments.py  test_auth.py  test_cli.py  test_config.py  test_courses.py  test_discussions.py  test_files.py  test_frontmatter.py  test_gradebook.py  test_grades.py  test_overrides.py  test_pages.py  test_panopto.py  test_quiz.py  test_quiz_import.py  test_reports.py  test_source_lint.py  test_source_map.py  test_sources.py  test_status.py  test_submissions.py
