[project]
name = "danvas"
version = "0.2.0"
description = "Unified operational Canvas CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "canvasapi>=3.3",
    "markdown>=3.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "secretpath>=0.1.0",
    "typer>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.1a22",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[project.scripts]
danvas = "danvas.cli:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "danvas"
module-root = "src"

[tool.uv.sources]
secretpath = { path = "../secretpath" }
